fixing another contrast error

--- a/Index/styles/index.css
+++ b/Index/styles/index.css
@@ -49,7 +49,7 @@ footer {
     text-align: center;
     border-radius: 20px;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
-    
+    color: white;
 }
 
 .date-box {
